--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^16.0.2",
     "react-dom": "^16.0.2",
     "react-embed": "^3.3.3",
+    "react-google-recaptcha": "^2.1.0",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.5",
     "semantic-ui-css": "^2.4.1",
