--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon index.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
- },
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -18,12 +18,13 @@
     "dotenv": "^12.0.4",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "node-fetch": "2.0",
     "nodemailer": "^6.7.2",
     "nodemailer-smtp-transport": "^2.7.4",
     "react-router": "6.2.1",
     "react-router-dom": "^6.2.1"
- },
- "devDependencies": {
-  "nodemon": "^2.0.15"
-}
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
